[package]
name = "simple-expand-tilde"
version = "0.4.7"
edition = "2021"
license = "MIT"
repository = "https://github.com/splurf/simple-expand-tilde"
authors = ["Evan Schwartzentruber <evandotschwartzentruber@gmail.com>"]
description = "Cross-platform and reliable tilde-expansion solution."
keywords = ["expand", "tilde", "fast", "path", "lightweight"]
categories = ["accessibility"]
exclude = [".github/", ".gitignore", "LICENSE", "tests/"]

[dependencies.simple-home-dir]
version = "0.4.7"

[profile.release]
lto = true
codegen-units = 1
