[package]
name = "simple-expand-tilde"
version = "0.5.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/splurf/simple-expand-tilde"
authors = ["Evan Schwartzentruber <evandotschwartzentruber@gmail.com>"]
description = "Cross-platform and reliable tilde-expansion solution."
keywords = ["expand", "tilde", "fast", "path", "lightweight"]
categories = ["accessibility"]
exclude = [".github/", ".gitignore", "LICENSE", "tests/"]

[profile.release]
lto = true
codegen-units = 1
